# Ctypes_Experiences

./: README.md
Arrays/: CMakeLists.txt  test.py
Arrays/include/: arrays.h
Arrays/src/: arrays.cpp
Class/: CMakeLists.txt  test.py
Class/include/: example.hpp
Class/src/: example.cpp
Ctypes_Experiences/SimpleMath/: test.sh
Ctypes_Experiences/SimpleMath/libsmath/: makefile
Ctypes_Experiences/SimpleMath/test_cpp/: test.cpp
HelloWorld/: CMakeLists.txt  helloWorld.py
HelloWorld/include/: helloWorld.h
HelloWorld/src/: helloWorld.cpp
MazeGenerator/: ctypes_test.py
MazeGenerator/Ctypes_Maze_Generator/: CMakeLists.txt
MazeGenerator/Ctypes_Maze_Generator/test/: CMakeLists.txt  main.cpp
MazeGenerator/Py_Maze_Generator/: mazeView.py
Maze_Generator/: py_test.py
Maze_Generator/Ctypes_Maze_Generator/include/: mazegenerator.hpp
Maze_Generator/Ctypes_Maze_Generator/src/: mazegenerator.cpp
Maze_Generator/Py_Maze_Generator/: mazeGenerator.py  mazeView.py
SimpleMath/libsmath/include/: smath.h
SimpleMath/libsmath/src/: smath.c
SimpleMath/test_c/: test.c
SimpleMath/test_py/: test.py
SimpleMath2/: CMakeLists.txt  test.py
SimpleMath2/libsmath/include/: smath.h
SimpleMath2/libsmath/src/: smath.cpp
SimpleSum/: CMakeLists.txt  test.py
SimpleSum/include/: SimpleSum.hpp
SimpleSum/src/: SimpleSum.cpp
Vectors/: CMakeLists.txt  test.py
Vectors/include/: cvector.h
Vectors/src/: cvector.cpp
